# hapthexa

./: .gitignore  FR_args.csv  FR_args_stop.csv  FR_args_up.csv  FR_pos.csv  FR_pos_up.csv  README.md  asi.perspective
install/: local_setup.sh  setup.sh
install/dynamixel_workbench_controllers/share/dynamixel_workbench_controllers/: package.bash  package.zsh
install/dynamixel_workbench_operators/share/dynamixel_workbench_operators/: package.bash  package.zsh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: package.bash  package.zsh
install/hapthexa_dxl_servo/share/hapthexa_dxl_servo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/genesis-ros/: CMakeLists.txt  package.xml
src/hapthexa_dxl_servo/: CMakeLists.txt  package.xml
src/hapthexa_dxl_servo/scripts/: force_sensor.py  forcesensor_read.py
src/hapthexa_dxl_servo/src/: hapthexa_servo.cpp
src/hapthexa_main/: CMakeLists.txt
src/hapthexa_main/scripts/: attitude_controller.py  omni_walk.py  rough_omni.py
src/hapthexa_main/src/: hapthexa_leg.cpp
src/hapthexa_msgs/: CMakeLists.txt
src/hapthexa_msgs/srv/: StopLeg.srv
src/hapthexa_policy/: CMakeLists.txt  package.xml
src/hapthexa_policy/launch/: policy.launch.py
src/hapthexa_policy/scripts/: policy_node.py
src/hapthexa_visualizer/: CMakeLists.txt  package.xml
src/hapthexa_visualizer/launch/: visualizer.launch.py
src/hapthexa_visualizer/scripts/: visualizer_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+154 files in other folders)
